@@ -1,5 +1,5 @@
 <Type Name="TreeNodeAddedHandler" FullName="Gtk.TreeNodeAddedHandler">
-  <TypeSignature Language="C#" Value="public sealed delegate void TreeNodeAddedHandler (object o, Gtk.ITreeNode child);" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed delegate void TreeNodeAddedHandler (object o, Gtk.ITreeNode child);" Maintainer="Mike Kestner" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyPublicKey></AssemblyPublicKey>
@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement />
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>TreeNodeAddedHandler delegate</summary>
+    <remarks>Event handler for notification of the addition of a <paramref name="child" /> to  node <paramref name="o" />.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
