@@ -1,5 +1,5 @@
 <Type Name="TreeNodeRemovedHandler" FullName="Gtk.TreeNodeRemovedHandler">
-  <TypeSignature Language="C#" Value="public sealed delegate void TreeNodeRemovedHandler (object o, int old_position);" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed delegate void TreeNodeRemovedHandler (object o, int old_position);" Maintainer="Mike Kestner" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyPublicKey></AssemblyPublicKey>
@@ -9,8 +9,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement />
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>TreeNodeRemovedHandler delegate</summary>
+    <remarks>
+      Event handler for notification of the removal of a child node.  The node is already
+      removed when the event is raised, so <paramref name="old_position" /> points to the
+      former position of the removed node in the child list of <paramref name="o" />.
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
