@@ -1,5 +1,11 @@
 2003-11-05  Mike Kestner  <mkestner@ximian.com>
 
+	* en/Gtk/ITreeNode.xml : documented
+	* en/Gtk/TreeNodeAddedHandler.xml : documented
+	* en/Gtk/TreeNodeRemovedHandler.xml : documented
+
+2003-11-05  Mike Kestner  <mkestner@ximian.com>
+
 	* en/Gtk/TreeNodeAttribute.xml : documented
 	* en/Gtk/TreeNodeValueAttribute.xml : documented
 
